--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
-<body>
-    <header>ALURAFLIX</header>
-
+<body> <!-- Início do corpo da página - todo conteúdo visível fica aqui -->
+    
+    <header>ALURAFLIX</header> 
+    <!-- Cabeçalho da página - normalmente contém logotipo/título principal -->
+    <!-- Obs: O texto "ALURAFLIX" aparece no topo da página -->
 
     <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
+    <!-- Título principal (Heading 1) - o texto aparece em tamanho grande -->
+    <!-- Obs: 'h1' é o cabeçalho mais importante (nível 1) -->
+
     <p>#homem-aranha</p>
+    <!-- Parágrafo - para textos comuns -->
+    <!-- Obs: A hashtag é apenas texto, não funciona como link -->
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <!-- Incorporação de vídeo do YouTube -->
+    <!-- width/height: dimensões do player largura e altura (560 pixels aprox 14 ou 15 cm) (315 pixels aprox 8 cm) -->
+    <!-- src: link do vídeo (único que você precisa alterar para trocar o vídeo) -->
+    <!-- allow: permissões para o player (reprodução automática, etc) -->
 
-</body>
+</body> <!-- Fim do corpo da página -->
